[project]
name = "chuk-stock-server"
version = "0.1.0"
description = "Real-time stock price server that provides updates through multiple protocols including Telnet and WebSocket"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "asyncio>=3.4.3",
    "chuk-protocol-server>=0.1.10",
    "yfinance>=0.2.55",
]

[project.urls]
Homepage = "https://github.com/chrishayuk/chuk-stock-server"
Issues = "https://github.com/chrishayuk/chuk-stock-server/issues"

[project.scripts]
stock-server = "chuk_stock_server.server:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.hatch.build.targets.wheel]
packages = ["chuk_stock_server"]
